TurtleLab/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar;C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab
-d
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\TurtleWorld.java
<---- end of javadoc command ---->
Loading source file C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\TurtleWorld.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_45
Building tree for all the packages and classes...
Generating C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\doc\TurtleWorld.html...
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):35: error: package javax.media does not exist
import javax.media.*;
^
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):36: error: package javax.media.control does not exist
import javax.media.control.*;
^
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):37: error: package javax.media.protocol does not exist
import javax.media.protocol.*;
^
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):38: error: package javax.media.protocol does not exist
import javax.media.protocol.DataSource;
                           ^
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):39: error: package javax.media.datasink does not exist
import javax.media.datasink.*;
^
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):40: error: package javax.media.format does not exist
import javax.media.format.VideoFormat;
                         ^
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):51: error: cannot find symbol
public class JpegImagesToMovie implements ControllerListener, 
                                          ^
  symbol: class ControllerListener
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):52: error: cannot find symbol
  DataSinkListener {
  ^
  symbol: class DataSinkListener
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):68: error: cannot find symbol
                               MediaLocator outML) {
                               ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):120: error: cannot find symbol
                         MediaLocator outML) {
                         ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):137: error: cannot find symbol
                      MediaLocator outML,
                      ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):233: error: cannot find symbol
                      MediaLocator outML,
                      ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):323: error: cannot find symbol
  DataSink createDataSink(Processor p, MediaLocator outML) {
                          ^
  symbol:   class Processor
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):323: error: cannot find symbol
  DataSink createDataSink(Processor p, MediaLocator outML) {
                                       ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):323: error: cannot find symbol
  DataSink createDataSink(Processor p, MediaLocator outML) {
  ^
  symbol:   class DataSink
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):354: error: cannot find symbol
  boolean waitForState(Processor p, int state) {
                       ^
  symbol:   class Processor
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):368: error: cannot find symbol
  public void controllerUpdate(ControllerEvent evt) {
                               ^
  symbol:   class ControllerEvent
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):410: error: cannot find symbol
  public void dataSinkUpdate(DataSinkEvent evt) {
                             ^
  symbol:   class DataSinkEvent
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):506: error: cannot find symbol
  static MediaLocator createMediaLocator(String url) {
         ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):537: error: cannot find symbol
  class ImageDataSource extends PullBufferDataSource {
                                ^
  symbol:   class PullBufferDataSource
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):604: error: cannot find symbol
  class ImageSourceStream implements PullBufferStream {
                                     ^
  symbol:   class PullBufferStream
  location: class JpegImagesToMovie
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):548: error: cannot find symbol
    public void setLocator(MediaLocator source) {
                           ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie.ImageDataSource
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):551: error: cannot find symbol
    public MediaLocator getLocator() {
           ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie.ImageDataSource
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):578: error: cannot find symbol
    public PullBufferStream[] getStreams() {
           ^
  symbol:   class PullBufferStream
  location: class JpegImagesToMovie.ImageDataSource
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):587: error: cannot find symbol
    public Time getDuration() {
           ^
  symbol:   class Time
  location: class JpegImagesToMovie.ImageDataSource
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):608: error: cannot find symbol
    VideoFormat format;
    ^
  symbol:   class VideoFormat
  location: class JpegImagesToMovie.ImageSourceStream
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):639: error: cannot find symbol
    public void read(Buffer buf) throws IOException {
                     ^
  symbol:   class Buffer
  location: class JpegImagesToMovie.ImageSourceStream
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):693: error: cannot find symbol
    public Format getFormat() {
           ^
  symbol:   class Format
  location: class JpegImagesToMovie.ImageSourceStream
C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar(JpegImagesToMovie.java):697: error: cannot find symbol
    public ContentDescriptor getContentDescriptor() {
           ^
  symbol:   class ContentDescriptor
  location: class JpegImagesToMovie.ImageSourceStream
Generating C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\doc\package-frame.html...
Generating C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\doc\package-summary.html...
Generating C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\doc\allclasses-frame.html...
Generating C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\doc\allclasses-noframe.html...
Generating C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\doc\index.html...
Generating C:\Users\hyan\Desktop\GitHub\unit1Objects\TurtleLab\doc\stylesheet.css...
29 errors
